<?xml version="1.0"?>
<package format="3">
  <name>ply_replay_imu</name>
  <version>0.1.0</version>
  <description>Replay pointclouds from PLY files and imu data with timestamps.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>setuptools</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

