<?xml version="1.0"?>
<package format="3">
  <name>mcap_merger</name>
  <version>0.0.0</version>
  <description>MCAP Merger: replay messages from two MCAP files in timestamp order</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>setuptools</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>mcap</exec_depend>
  <exec_depend>mcap_ros2_support</exec_depend>
   <export>
    <build_type>ament_python</build_type>
  </export>
</package>
